--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <footer>
         <div class="footer-container">
             <div class="left-col">
-                <p class="rights">© 2022 Created By <b>Veal</b>  All Rights Reserved.</p>
-                <p class="rights">www.github.com/vealloll <b></b></p>
+                <p class="rights">© 2022 Created By <b>Nonamed</b>  All Rights Reserved.</p>
+                <p class="rights">khord: nonamedranu <b></b></p>
             </div>
         </div>
     </footer>
