--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <section class="hidden">
         <p1>~ About ~</p1>
         <p2>
-            We are a group of Developers And Doxer's that like to Dox
-            Pedophile's And Post Them. IDGAF About Your Opinion
+            We are a group of Developers And Doxer's that like Develop Program's And to Dox
+            Pedophile's, AndPost Them. IDGAF About Your Opinion
         </p2>
         <p2>
             help to new people wanting to learn this kind of stuff
@@ -49,7 +49,7 @@
           </div>
     </section>
     <section class="hidden">
-        <h1>@Ledzz</h1>
+        <h1>@Nobody Yet</h1>
         <div class="framework">
             <div class="card" data-tilt>
               <div class="profile-pic2"></div>
@@ -58,9 +58,9 @@
                 <a href="https://github.com/nothinghere"><img src="./images/github.png" alt=""></a>
                 <a href="https://t.me/ledzzs"><img src="./images/telegram.png" alt=""></a>
                 <p>
-                    Hi my Name is Ledzz and i usually hangout
-                    With Nonamed i enjoy playing games 
-                    mainly fortnite
+                    ??? ??? ??? ??? ??? ??? ??? ??? ???
+                    ??? i ??? ??? ??? 
+                    ??? ???
                 </p>
             </div>
           </div>
