--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             Pedophile's, AndPost Them. IDGAF About Your Opinion
         </p2>
         <p2>
-            help to new people wanting to learn this kind of stuff
-            we mainly use Osint Tool's And Etc.
+            help to new people wanting to learn this kind of stuff.
         </p2>
         <p2>
-            also we are a group.
+            Discord Tags:
+            Nonamed: nonamedranu
+            Cozmic: fearedcozmiic
         </p2>
     </section>
     <section class="hidden">
@@ -49,18 +50,18 @@
           </div>
     </section>
     <section class="hidden">
-        <h1>@Nobody Yet</h1>
+        <h1>@Cozmic Yet</h1>
         <div class="framework">
             <div class="card" data-tilt>
               <div class="profile-pic2"></div>
                 <h3>Contact Me Here -> </h3>
               <div class="social-media-icons">
                 <a href="https://github.com/nothinghere"><img src="./images/github.png" alt=""></a>
-                <a href="https://t.me/ledzzs"><img src="./images/telegram.png" alt=""></a>
+                <a href="https://t.me/cozmicreturns"><img src="./images/telegram.png" alt=""></a>
                 <p>
-                    ??? ??? ??? ??? ??? ??? ??? ??? ???
-                    ??? i ??? ??? ??? 
-                    ??? ???
+                 hi im cozmic, i troll and dox newgens,
+                 learning c++, python/pawno 4 life<^3
+                 my khord is fearedcozmiic
                 </p>
             </div>
           </div>
