--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
     </section>
     <section class="hidden">
-        <h1>@Cozmic Yet</h1>
+        <h1>@Cozmic</h1>
         <div class="framework">
             <div class="card" data-tilt>
               <div class="profile-pic2"></div>
